[package]
name = "bplus-tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = {version = "0.12", features = ["arc_lock"]}
[features]
"stress" = []

[dev-dependencies]
criterion = {version = "0.3", features = ["html_reports"]}

[[bench]]
name = "benchmark"
harness = false